# luafar2m

./: .gitignore  .luacheckrc  CMakeLists.txt  LICENSE  Makefile  README  README.md  SciTEDirectory.properties  _plug_init.lua  config.mak  far2m_src  key_macros.ini  luafar_init.lua  makefile-defines.md  plugin.mak
1/: 2.lua
Macros/: .luacheckrc
Macros/reserve/: Shell_SelectingEx.lua
Macros/scripts/: _macroinit.lua  bito.lua
Macros/util/: load_macro_folders.lua  moon2lua.lua  show_path.lua
Plugins/_common/: minilua.c
Plugins/_luafar_/: Makefile  _luacheckrc  config.mak  plugin.mak
Plugins/filegen/: CMakeLists.txt
Plugins/filegen/src/: GlobalInfo.c  filegen.lua  filegen_eng.hlf
Plugins/highlight/: CMakeLists.txt
Plugins/highlight/plug/: GlobalInfo.c  highlight.lua
Plugins/highlight/plug/syntaxes/: syntax_cmake.lua  syntax_cpp.lua  syntax_lua.lua  syntax_python.lua  syntax_shell.lua  syntax_srecord.lua
Plugins/highlight/src/: GlobalInfo.c  highlight.lua
Plugins/highlight/src/syntaxes/: syntax_cmake.lua  syntax_cpp.lua  syntax_diff.lua  syntax_ini.lua  syntax_lua.lua  syntax_moonscript.lua  syntax_pascal.lua  syntax_shell.lua
Plugins/hlfviewer/: CMakeLists.txt
Plugins/hlfviewer/plug/: HlfViewerPol.hlf  hlfviewer.lua  hv_lang.templ
Plugins/lf4ed/: CMakeLists.txt
Plugins/lf4ed/doc/: lf4ed_manual.chm
Plugins/lf4ed/plug/: GlobalInfo.c  lf4ed.lua  lf4ed_eng.hlf  wrap.lua
Plugins/lf4ed/plug/scripts/: Editor.ColorWord.moon  bracket.lua  coding.lua  compare_by_hash.lua  file2hex.lua  misc.lua  scite_like.lua  visual_compare.lua
Plugins/lf4ed/src/: GlobalInfo.c  _usermenu.lua  config.lua  expression.lua  lf4ed.lua  lf4ed_eng.hlf  lf4ed_lang.templ  lf4ed_rus.hlf  sortdialog.lua  sortlines.lua  wrap.lua
Plugins/lf4ed/src/scripts/: Editor.ColorWord.moon  compare_by_hash.lua  file2hex.lua  hashes.lua  misc.lua  run_code.lua  scite_like.lua  test_sortlines.lua  visual_compare.lua
Plugins/lfhistory/: CMakeLists.txt
Plugins/lfhistory/plug/: GlobalInfo.c  lfh_eng.hlf  lfh_lang.templ  lfhistory.lua
Plugins/lfhistory/src/: GlobalInfo.c  lfh_config.lua  lfh_eng.hlf  lfh_rus.hlf  lfhistory.lua
Plugins/lfsearch/: CMakeLists.txt
Plugins/lfsearch/plug/: GlobalInfo.c  lfs_common.lua  lfs_lang.templ  lfs_panels.lua  lfs_rename.lua  lfs_replib.lua  reader.c
Plugins/lfsearch/plug/scripts/: test_lfsearch.lua
Plugins/lfsearch/src/: GlobalInfo.c  _usermenu.lua  lfs_common.lua  lfs_editengine.lua  lfs_editmain.lua  lfs_editors.lua  lfs_eng.hlf  lfs_lang.templ  lfs_mreplace.lua  lfs_panels.lua  lfs_rename.lua  lfs_replib.lua  lfs_rus.hlf  lfsearch.lua  reader.c
Plugins/lfsearch/src/scripts/: test_lfsearch.lua
Plugins/lftmp/: CMakeLists.txt
Plugins/lftmp/plug/: GlobalInfo.c
Plugins/lftmp/src/: GlobalInfo.c  LuaTmpRus.hlf  lftmp.lua
Plugins/luapanel/: CMakeLists.txt
Plugins/macro2lua/: CMakeLists.txt  Makefile  _globalinfo.lua  common.mak  m2l_test.lua  macro2lua.c  macro2lua.lua  macrosyn.lua  readme.txt
Plugins/polygon/: CMakeLists.txt
Plugins/polygon/plug/: GlobalInfo.c  polygon.c  polygon.ini  polygon.lua
Plugins/polygon/plug/doc/: changelog.txt
Plugins/polygon/plug/modules/: exporter.lua  panel.lua  progress.lua
Plugins/polygon/src/: GlobalInfo.c  lsqlite3.c  polygon.c  polygon.lua  polygon_eng.hlf  polygon_lang.templ  polygon_rus.hlf
Plugins/polygon/src/doc/: License-Polygon  License-SQLiteDB  changelog.txt
Plugins/polygon/src/modules/: config.lua  editor.lua  exporter.lua  panel.lua
Plugins/sqlarc/: CMakeLists.txt
Plugins/sqlarc/src/: GlobalInfo.c  lsqlite3.c  sqlarc.c  sqlarc.lua
_highlight_/: CMakeLists.txt
_highlight_/plug/: highlight.lua
_highlight_/plug/syntaxes/: syntax_batch.lua  syntax_cmake.lua  syntax_grep.lua  syntax_hlf.lua  syntax_ini.lua  syntax_intel_hex.lua  syntax_java.lua  syntax_lng.lua  syntax_lua.lua  syntax_makefile.lua  syntax_shell.lua  syntax_srecord.lua  syntax_tcl.lua  syntax_text.lua
_hlfviewer_/plug/: HlfViewerBel.lng  HlfViewerEng.hlf  HlfViewerEng.lng  HlfViewerIta.lng  HlfViewerPol.hlf  HlfViewerPol.lng  HlfViewerRus.hlf  HlfViewerRus.lng  HlfViewerSky.lng  HlfViewerSpa.lng  HlfViewerUkr.hlf  HlfViewerUkr.lng  LICENSE  hlfviewer.lua  hv_lang.templ
_lf4ed_/: CMakeLists.txt
_lf4ed_/doc/: lf4ed_manual.chm  lf4ed_manual.tsi
_lf4ed_/plug/: _plug_init.lua  _usermenu.lua  config.lua  expression.lua  lf4ed.lua  lf4ed_eng.hlf  lf4ed_lang.templ  lf4ed_rus.hlf  sortdialog.lua  sortlines.lua  wrap.lua
_lf4ed_/plug/scripts/: Editor.ColorWord.moon  bracket.lua  calc.lua  coding.lua  compare_by_hash.lua  dup_line.lua  editor_events.lua  editor_luacheck.lua  file2hex.lua  hashes.lua  misc.lua  multiline.lua  run_code.lua  scite_like.lua  test_sortlines.lua  visual_compare.lua
_lf4ed_/plug/scripts/dupfighter/: dupfighter.lua  dupfighter_eng.hlf
_lf4ed_/plug/scripts/macrobrowser/: _macrodialog.lua  macrobrowser.lua  macrodialog.lua
_lfhistory_/: CMakeLists.txt
_lfhistory_/plug/: lfh_config.lua  lfh_eng.hlf  lfh_lang.lua  lfh_lang.templ  lfh_rus.hlf  lfhistory.lua
_lfsearch_/: CMakeLists.txt
_lfsearch_/plug/: _usermenu.lua  lfs_common.lua  lfs_editengine.lua  lfs_editmain.lua  lfs_editors.lua  lfs_eng.hlf  lfs_lang.lua  lfs_lang.templ  lfs_mreplace.lua  lfs_panels.lua  lfs_rename.lua  lfs_replib.lua  lfs_rus.hlf  lfsearch.lua  reader.c  tmpp_lang2.templ
_lfsearch_/plug/doc/: 3rd_party.txt
_lfsearch_/plug/scripts/: selftest.lua  test_lfsearch.lua
_lfsearch_/reader/: Makefile  reader.c
_lftmp_/: README
_lftmp_/plug/: LuaTmpEng.hlf  lftmp.lua  tmpp_lang.templ
_macropanel_/: CMakeLists.txt
_polygon_/: CMakeLists.txt
_polygon_/plug/: lsqlite3.c  polygon.c  polygon.lua  polygon_eng.hlf  polygon_lang.lua  polygon_lang.templ  polygon_rus.hlf
_polygon_/plug/doc/: License-Polygon  changelog.txt  readme.txt
_polygon_/plug/modules/: config.lua  editor.lua  exporter.lua  panel.lua  progress.lua  utils.lua
lua_share/: c_calc.lua  crc32.lua  generate.lua  hilite.lua  inifile.lua  makelang.lua
manuals/: Makefile  cmdline.lua  tp2hh.lua  tp2hh_new.lua  tp2hh_old.lua  tsi.lua
(+310 files in other folders)
